[tool.poetry]
name = "style-guide"
version = "0.1.0"
description = "A pylint plugin for our custom styles"
authors = ["nextsnake"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
taskipy = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
