[tool.poetry]
name = "style-guide"
version = "0.1.0"
description = "A pylint plugin for our custom styles"
authors = ["nextsnake"]
license = "MIT"

packages = [
    { include = "nextstyle" }
]

[tool.poetry.dependencies]
python = "^3.8"
taskipy = "^1.10.1"
pylint = "^2.13.4"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
py_version = 38
line_length = 120
combine_as_imports = true
